creation of activity_activity

--- a/app/src/main/res/layout/activity_activity.xml
+++ b/app/src/main/res/layout/activity_activity.xml
@@ -31,7 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Goals"
+            android:text="Activities"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/white"
@@ -50,31 +50,31 @@
         android:background="#0F52BA">
 
         <ImageView
-           android:layout_width="40sp"
-           android:id="@+id/floating_add"
-           android:layout_height="40sp"
-           android:src="@drawable/ic_add_24"
-           android:layout_margin="7sp"/>
+            android:layout_width="40sp"
+            android:id="@+id/floating_add"
+            android:layout_height="40sp"
+            android:src="@drawable/ic_add_24"
+            android:layout_margin="7sp"/>
 
     </LinearLayout>
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@id/add"
-    android:layout_marginRight="20sp"
-    android:layout_marginLeft="20sp"
-    android:layout_marginBottom="16sp">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/goalrecyler_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/single_goal"    >
+        android:layout_height="match_parent"
+        android:layout_below="@id/add"
+        android:layout_marginRight="20sp"
+        android:layout_marginLeft="20sp"
+        android:layout_marginBottom="16sp">
 
-    </androidx.recyclerview.widget.RecyclerView>
-</RelativeLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/goalrecyler_view"
+            android:layout_width="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/single_activity"    >
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </RelativeLayout>
 
 
 
