--- a/app/src/main/res/layout/single_activity.xml
+++ b/app/src/main/res/layout/single_activity.xml
@@ -28,7 +28,7 @@
         android:gravity="center_horizontal"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
-        android:text="learn java programming"
+        android:text="assignment 1"
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="15dp"
