--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -15,18 +15,18 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:paddingTop="10dp"
-        android:text="Add goal to be achieved"
+        android:text="@string/add_goal_to_be_achieved"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="30dp"
+        android:textSize="30sp"
         />
 
     <TextView
         android:layout_width="72dp"
         android:layout_height="44dp"
-        android:text="Title"
+        android:text="@string/title"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
        android:layout_marginTop="25sp"/>
 
     <EditText
@@ -35,7 +35,7 @@
         android:layout_height="43dp"
         android:autofillHints="title"
         android:background="@color/white"
-        android:hint="Enter goal title"
+        android:hint="@string/enter_goal_title"
         android:inputType="textPersonName"
         android:padding="9sp" />
 
@@ -43,18 +43,18 @@
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginTop="10dp"
-        android:text="Description"
+        android:text="@string/description"
         android:textColor="@color/white"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/goalDescrp"
+        android:id="@+id/goalDr"
         android:layout_width="match_parent"
         android:layout_height="111dp"
         android:autofillHints="description"
         android:background="@color/white"
         android:ems="10"
-        android:hint="Enter goal description"
+        android:hint="@string/enter_goal_description"
         android:padding="9sp"
         android:inputType="text|textAutoCorrect|textAutoComplete" />
 
@@ -74,19 +74,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="52dp"
                 android:paddingBottom="10dp"
-                android:text="Start dte"
+                android:text="@string/start_dte"
                 android:textColor="@color/white"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
             <EditText
                 android:layout_width="160sp"
                 android:layout_height="41dp"
                 android:background="@color/white"
                 android:ems="10"
-                android:hint="01/12/2021"
+                android:hint="@string/_01_12_2021"
                 android:inputType="date"
                 android:paddingLeft="10dp"
-                android:autofillHints="start date" />
+                android:autofillHints="start date"
+                android:paddingStart="10dp"
+                tools:ignore="RtlSymmetry" />
         </LinearLayout>
 
         <LinearLayout
@@ -94,16 +96,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            tools:ignore="RelativeOverlap">
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="52dp"
                 android:paddingBottom="10dp"
-                android:text="End date"
+                android:text="@string/end_date"
                 android:textColor="@color/white"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
             <EditText
                 android:id="@+id/goalEndDate"
@@ -112,9 +115,11 @@
                 android:autofillHints="end date"
                 android:background="@color/white"
                 android:ems="10"
-                android:hint="01/12/2021"
+                android:hint="@string/_01_12_2021"
                 android:inputType="date"
-                android:paddingLeft="10dp"/>
+                android:paddingLeft="10dp"
+                android:paddingStart="10dp"
+                tools:ignore="RtlSymmetry" />
         </LinearLayout>
 
     </RelativeLayout>
@@ -125,7 +130,7 @@
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="52sp"
-        android:text="SAVE"
+        android:text="@string/save"
         android:textSize="20sp"
         android:textStyle="bold"
         app:backgroundTint="#08399F"
